2004-08-19  Pavel Shirshov  <pavelsh@mail.ru>

	* screen.c (paint_frame): Fix possible buffer overflow.

2004-08-18  Pavel Shirshov  <pavelsh@mail.ru>

	* background.c (do_background): Use O_RDWR when opening 
	the file '/dev/null' for replacement standard streams. 

2004-08-17  Pavel Shirshov  <pavelsh@mail.ru>

	* utilunix.c (mc_tmpdir): Check return value of getpwuid()
	for NULL. 

2004-04-18  Pavel Roskin  <proski@gnu.org>

	* vfsdummy.h [!USE_VFS]: Make sure that vfs_canon() doesn't
	change the original string.  Fix compilation without VFS.

2004-03-07  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* achown.c (init_chown_advanced) [ENABLE_NLS]: i18n fix.
	* user.c (extract_line): Add a new parameter (size of the
	output buffer) to prevent buffer overflow.

2004-03-05  Pavel Roskin  <proski@gnu.org>

	* subshell.c: Partly revert previous patch to preserve
	translated strings.

2004-02-09  Pavel Roskin  <proski@gnu.org>

	* subshell.c: Use "\r\n" at the end of all error messages.
	Don't use perror().  Make error messages more exact.

2004-01-23  Pavel Roskin  <proski@gnu.org>

	* utilunix.c (canonicalize_pathname): Add support for UNC paths.

	* utilunix.c (canonicalize_pathname): Return void to make it
	clear that the conversion is done in place.  Adjust all callers.

	* filegui.c (init_replace): Don't show the "Reget" button when
	moving files.  Reported by Arpad Biro <biro_arpad@yahoo.com>

	* fileopctx.h: Add "operation" filed to FileOpContext.
	* fileopctx.c (file_op_context_new): Add "operation" argument.
	* filegui.c (file_op_context_create_ui): Remove "operation"
	argument, it's known already.  Adjust all callers.

2004-01-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* user.c (execute_menu_command): Put /bin/sh in the beginning of
	the script.

2004-01-22  Pavel Roskin  <proski@gnu.org>

	* screen.c (display_mini_info): Correctly fill the space after
	"<readlink failed>".

	* glibcompat.h: Fix definition of g_try_realloc().
